<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/edit_menu"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:background="@color/colorTop"
        android:textSize="18sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/outline_box"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/ubah_nama_paket">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/te_nama_paket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@android:color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/outline_box"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/ubah_deskripsi">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/te_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@android:color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/outline_box"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/ubah_harga">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/te_harga"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textColor="@android:color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_save_ubah"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/save_data"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/bg_btn_save"/>
    </LinearLayout>
</LinearLayout>