<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearGradient"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:background="@drawable/gradient_dashboard">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dashboard"
                android:layout_alignStart="@+id/dashboard"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="0dp"
                android:text="Tanggal"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="25dp"
                android:text="@string/dashboard"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_admin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:src="@drawable/ic_power" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/relativeViewShape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp"
        android:background="@drawable/shape_rectangle">
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/textCont"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearGradient"
        android:layout_marginTop="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <GridLayout
                android:id="@+id/gridL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:rowCount="3"
                android:columnCount="2"
                android:padding="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginBottom="5dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:src="@drawable/person"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:text="@string/data_menu"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/list_menu"
                            android:textSize="14sp"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:src="@drawable/person"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:text="@string/data_user"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/list_menu"
                            android:textSize="14sp"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="20dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:src="@drawable/person"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:text="@string/data_income"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_income"
                            android:layout_gravity="center"
                            android:textSize="14sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:src="@drawable/person"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:text="@string/transaksi"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/transaksi_pesanan"
                            android:textSize="14sp"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="20dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:src="@drawable/person"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:text="@string/order"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/list_order"
                            android:layout_gravity="center"
                            android:textSize="14sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>
        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>